# valohai-llm

./: .env.dev-example  .gitignore  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yaml
examples/: sample_dataset.jsonl  sample_dataset_2.csv  simple_example.py  support_bot_eval.py  task_example.py
examples/data/: support_tickets.jsonl
src/valohai_llm/: __init__.py  _config.py  _hooks.py  _proxy_hook.py  _state.py  compat.py  logging.py  parsers.py  post.py  task.py
src/valohai_llm/integrations/: _langfuse.py  _proxy_hook.py
src/valohai_llm/viewer/: __init__.py  __main__.py  _app_html.py  _server.py
tests/: conftest.py  test_langfuse.py  test_parsers.py  test_post.py  test_privates.py  test_proxy_hook.py  test_task.py  test_viewer.py
tests/integrations/: conftest.py  consts.py  test_langfuse.py  test_proxy_hook.py  test_proxy_hook_aiohttp.py  test_proxy_hook_anthropic.py  test_proxy_hook_httpx.py  test_proxy_hook_mistral.py  test_proxy_hook_openai.py  test_proxy_hook_requests.py
